# v4r

./: .gitlab-ci.yml  AUTHORS  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Readme.md  package.xml  setup.sh
apps/: CMakeLists.txt
apps/3D_scene_reconstruction_by_SIFT_and_MST/: CMakeLists.txt  main.cpp
apps/AttentionSegmentation/: CMakeLists.txt  createTrainingSet.cpp  scaleTrainingSet.cpp  segment.cpp  segmentAttention.cpp  segmentIncremental.cpp  trainSVM.cpp
apps/ConvertTransformationMatrixIntoPCDpose/: CMakeLists.txt  save_pose_into_pcd.cpp
apps/MultiViewObjectRecognizer/: CMakeLists.txt  main.cpp  visualization.cpp  visualization.h
apps/ObjectGroundTruthAnnotator/: CMakeLists.txt  GT6DOF.cpp  main_window.cpp  main_window.h  or_evaluator.h  or_evaluator.hpp
apps/ObjectRecognizer/: CMakeLists.txt  check_hypotheses.cpp  compute_recognition_rate.cpp  compute_recognition_rate_over_occlusion.cpp  main.cpp  mv_eval.cpp
apps/ObjectRecognizer/cfg/: camera.xml  hv_config.xml  local_pipeline.xml  multipipeline_config.xml
apps/RTMT/: BundleAdjustment.cpp  BundleAdjustment.h  CMakeLists.txt  Camera.cpp  Camera.h  MultiSession.cpp  MultiSession.h  ObjectSegmentation.cpp  ObjectSegmentation.h  OcclusionClustering.cc  OcclusionClustering.hh  StoreTrackingModel.cpp  StoreTrackingModel.h  glviewer.cpp  glviewer.h  main.cpp  mainwindow.cpp  mainwindow.h  params.cpp  params.h  sensor.cpp  sensor.h
apps/RTMT2/: CMakeLists.txt  Camera.cpp  Camera.h  CreateTrackingModel.cpp  CreateTrackingModel.h  ObjectSegmentation.cpp  ObjectSegmentation.h  OctreeVoxelCentroidContainerXYZRGB.hpp  glviewer.cpp  glviewer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  params.cpp  params.h  params.ui  sensor.cpp  sensor.h
apps/segmentation/: labelingSlic.cpp
apps/semantic_segmentation/: CMakeLists.txt  analyze3DEF.cpp  create_trainingdata.cpp  evaluate3DEF.cpp  merge3DEF.cpp  segmentation_demo.cpp  semseg_demo.cpp  train3DEF.cpp  updateleafs3DEF.cpp
cmake/: V4RCompilerOptions.cmake  V4RDebug.cmake  V4RFindQt.cmake  V4RGenConfig.cmake  V4RModule.cmake  V4RStatus.cmake  V4RThirdParty.cmake  V4RUtils.cmake
cmake/scripts/: ApplyPatches.cmake
cmake/templates/: V4RConfig.cmake.in  V4RDependencies.cmake.in  v4r_config.h.in
docs/: ObjectClassification.md  v4r_style_guide.md
modules/apps/: CMakeLists.txt
modules/apps/src/: CloudSegmenter.cpp  ObjectRecognizer.cpp  ObjectRecognizerParameter.cpp  ViewRenderer.cpp  compute_recognition_rate.cpp  visualization.cpp
modules/attention_segmentation/: CMakeLists.txt
modules/attention_segmentation/src/: AddGroundTruth.cpp  AmHitRatio.cpp  AttentionExampleUtils.cpp  BaseMap.cpp  BoundaryRelationsBase.cpp  BoundaryRelationsMeanColor.cpp  BoundaryRelationsMeanCurvature.cpp  BoundaryRelationsMeanDepth.cpp  ClusterNormalsToPlanes.cpp  ColorHistogram.cpp  ColorMap.cpp  EPBase.cpp  Fourier.cpp  FrintropSaliencyMap.cpp  Gabor.cpp  Graph.cpp  GraphCut.cpp  HitRatio.cpp  IKNSaliencyMap.cpp  LocationMap.cpp  MSR.cpp  MapsCombination.cpp  OrientationMap.cpp  PCA.cpp  PCLUtils.cpp  RelativeSurfaceOrientationMap.cpp  SVMFileCreator.cpp  SVMPredictorSingle.cpp  SVMScale.cpp  SVMTrainModel.cpp  StructuralRelations.cpp  SurfaceCurvatureMap.cpp  SurfaceHeightMap.cpp  SurfaceModel.cpp  SurfaceModeling.cpp  Symmetry3DMap.cpp  SymmetryMap.cpp  TJ.cpp  Texture.cpp  WTA.cpp  (+22 more)
modules/camera_tracking_and_mapping/: CMakeLists.txt
modules/camera_tracking_and_mapping/src/: OcclusionClustering.cc  OptimizeBundleColours.cc  PoissonTriangulation.cc  TSFData.cpp  TSFFrame.cc  TSFGlobalCloudFiltering.cc  TSFGlobalCloudFilteringSimple.cpp  TSFMapping.cc  TSFOptimizeBundle.cc  TSFPoseTrackerKLT.cc  TSFVisualSLAM.cpp  TSFilterCloudsXYZRGB.cpp
modules/change_detection/src/: change_detection.cpp  viewport_checker.cpp  visualizer.cpp
modules/common/src/: ClusteringRNN.cpp  ZAdaptiveNormals.cpp  color_comparison.cpp  flann.cpp  graph_geometric_consistency.cpp  histogram.cpp  img_utils.cpp  kmeans.cpp  miscellaneous.cpp  noise_models.cpp  normal_estimator_integral_image.cpp  normal_estimator_pcl.cpp  normal_estimator_z_adaptive.cpp  normals.cpp  occlusion_reasoning.cpp  pcl_opencv.cpp  pcl_utils.cpp  pcl_visualization_utils.cpp  plane_model.cpp  rgb2cielab.cpp  zbuffering.cpp
modules/features/: CMakeLists.txt
modules/features/src/: ComputeImGDescOrientations.cpp  ComputeImGradientDescriptors.cpp  FeatureDetector_KD_CVSIFT.cpp  FeatureDetector_KD_FAST_IMGD.cpp  FeatureDetector_KD_ORB.cpp  FeatureDetector_KD_SIFTGPU.cpp  FeatureDetector_K_HARRIS.cpp  FeatureSelection.cpp  ImGDescOrientation.cpp  ImGradientDescriptor.cpp  PSiftGPU.cpp  esf_estimator.cpp  global_alexnet_cnn_estimator.cpp  (+8 more)
modules/io/: CMakeLists.txt
modules/recognition/: CMakeLists.txt
modules/reconstruction/: CMakeLists.txt
modules/surface_texturing/: CMakeLists.txt
samples/: CMakeLists.txt
samples/eval/: esf_object_classifier.cpp  incremental_object_learning.cpp  object_recognizer.cpp  object_recognizer_multiview.cpp
samples/examples/: CMakeLists.txt  Exmpl3DSymSalMap.cpp  ExmplColorMap.cpp  ExmplFrintropSaliencyMap.cpp  ExmplHitRatio.cpp  ExmplIttiSaliencyMap.cpp  ExmplLocationMap.cpp  ExmplMSR.cpp  ExmplMapCombination.cpp  ExmplOrientationMap.cpp  ExmplSalLine.cpp  ExmplSurfCurvatureMap.cpp  ExmplSurfHeightMap.cpp  ExmplSurfOrientationMap.cpp  ExmplSymSalMap.cpp  ExmplWTA.cpp  camera_tracking_and_filtering.cpp  camera_tracking_and_mapping.cpp  classify_with_RF.cpp  classify_with_SVM_tmp.cpp  depth_map_renderer.cpp  esf_object_classifier.cpp  imkOptimizeModel.cpp  imkRecognizeObject-file.cpp  incremental_object_learning.cpp  keypoint_extraction.cpp  noise_model_based_cloud_integration.cpp  object_recognizer_multiview.cpp  object_tracker_mono.cpp  segment_pcd.cpp  temporalFiltering.cpp
samples/tools/: CMakeLists.txt  convertOldModelDatabaseToNew.cpp  create_annotated_images_from_recognition_gt_data.cpp  create_classification_db_from_ply_files.cpp  pcd2png.cpp  pcd_ground_truth_labelling.cpp  save_pose_into_pcd.cpp  view_all_point_clouds_in_folder.cpp  visualize_hypothesis.cpp
(+424 files in other folders)
